Revert "fix overflow issus"
This reverts commit 7240f34f38d76520f5a9cf7456431b4e5de62358.

--- a/release/css/style.css
+++ b/release/css/style.css
@@ -304,6 +304,7 @@ button.warning, .button.warning {
 
 .loginBody {
     min-height: 100%!important;
+    overflow: hidden;
     margin: 0;
 }
 
@@ -551,7 +552,9 @@ body {
             justify-content: center;
 
     margin: 0;
+    
     min-height: 100%!important;
+    overflow: hidden;
 }
 
 body>header {
